--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --padding-width: 15px;
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -9,6 +13,9 @@ body {
 
 .dialog {
     width: 300px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: var(--padding-width);
 }
 
 .actions {
@@ -24,6 +31,7 @@ button {
 .header {
     font-size: 2em;
     font-weight: bold;
+    margin: 0 0 var(--padding-width) 0;
     text-align: center;
 }
 
