--- a/style.css
+++ b/style.css
@@ -22,17 +22,20 @@ body {
 .actions {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
 }
 
 button {
-    width: 70px;
+    width: 100px;
     padding: 4px 20px;
 }
 
 .header {
     font-size: 2em;
     font-weight: bold;
-    margin: 0 0 var(--padding-width) 0;
+    padding: 0 0 var(--padding-width) 0;
+    margin: 0;
     text-align: center;
 }
 
